UI fixes and improvements - fixed search/fitlers spacing - fixed responsiveness with search + filter components - added logo and bg image - tweaked colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,11 +21,18 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #fff
+  background-image: url('../public/bg_pattern.png');
+  background-repeat: repeat;
+}
+/* a cheaters way to lowering the opacity of the background image */
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8); 
+  z-index: -1; 
 }
 
-@media screen and (max-width: 600px) {
-  body {
-    font-size: 12px;
-  }
-}
